z-index fix

--- a/jorge2/styles.css
+++ b/jorge2/styles.css
@@ -33,6 +33,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 25px;
+  z-index: 0;
 }
 
 .feeling {
