--- a/tiger/styles.css
+++ b/tiger/styles.css
@@ -58,6 +58,7 @@ p {
   display: flex;
   flex-direction: column;
   transition: 0.25s;
+  z-index: 0;
 
 }
 
